--- a/title_page_1.tex
+++ b/title_page_1.tex
@@ -45,7 +45,7 @@
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\textsc{\LARGE University Name}\\[1.5cm] % Name of your university/college
+\textsc{\LARGE Universität Passau}\\[1.5cm] % Name of your university/college
 \textsc{\Large Major Heading}\\[0.5cm] % Major heading such as course name
 \textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
 
@@ -64,14 +64,14 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-John \textsc{Smith} % Your name
+Stefan \textsc{Huber} % Your name
 \end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
-Dr. James \textsc{Smith} % Supervisor's Name
+\emph{Betreuer:} \\
+Andreas \textsc{Simbürger} % Supervisor's Name
 \end{flushright}
 \end{minipage}\\[4cm]
 
