Add further structure

--- a/main.tex
+++ b/main.tex
@@ -14,9 +14,17 @@
 \tableofcontents
 
 \chapter{Motivation}
-\input{chapter01_Motivation.tex}
+\input{Motivation.tex}
 
-\chapter{Begriffsklaerung}
-\input{chapter02_Begriffsklaerung.tex}
+\chapter{Begriffsklärung}
+\input{Begriffsklaerung.tex}
+
+\chapter{Verwendete Software}
+\input{VerwendeteSoftware.tex}
+
+\chapter{Aufbau LLVM}
+\input{AufbauLLVM.tex}
+
+\chapter{Experimentelle Studie}
 
 \end{document}
