--- a/main.tex
+++ b/main.tex
@@ -27,4 +27,10 @@
 
 \chapter{Experimentelle Studie}
 
+\chapter{Quellen}
+\nocite{*}
+\printbibliography[heading=bibintoc, title={Literatur}, keyword=Literatur]
+\printbibliography[title={Diagramme}, keyword=Diagramm]
+\printbibliography[title={Sonstige}, notkeyword=Literatur, notkeyword=Diagramm]
+
 \end{document}
