Added chapter for polyhedral model

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 \chapter{Begriffsklärung}
 \input{Begriffsklaerung.tex}
 
+\chapter{Polyeder-Modell}
+\input{PolyederModell.tex}
+
 \chapter{Verwendete Software}
 \input{VerwendeteSoftware.tex}
 
