--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,14 @@
 @online{
-    Grosser,
+    PollyGrosser,
     author={Tobias Grosser},
-    year={2222},
-    url={haha.de},
-    urldate={2222-12-22}
+    year={2012},
+    url={http://grosser.es/publications/grosser-2012-Polly-Performing-polyhedral-optimizations-on-a-low-level-intermediate-representation.pdf},
+    urldate={2017-07-20}
+}
+@online{
+    GrosserDiploma,
+    author={Tobias Grosser},
+    year={2011},
+    url={http://grosser.es/publications/grosser-2011-Enabling-Polyhedral-Optimizations-in-LLVM-diplomathesis.pdf},
+    urldate={2017-07-20}
 }
