--- a/main.tex
+++ b/main.tex
@@ -32,8 +32,8 @@
 
 \chapter{Quellen}
 \nocite{*}
-\printbibliography[heading=bibintoc, title={Literatur}, keyword=Literatur]
-\printbibliography[title={Diagramme}, keyword=Diagramm]
-\printbibliography[title={Sonstige}, notkeyword=Literatur, notkeyword=Diagramm]
+\printbibliography[heading=bibintoc, title={Literatur}, keyword=Literature]
+\printbibliography[title={Diagramme}, keyword=Diagram]
+\printbibliography[title={Sonstige}, notkeyword=Literature, notkeyword=Diagram]
 
 \end{document}
