--- a/references.bib
+++ b/references.bib
@@ -3,12 +3,14 @@
     author={Tobias Grosser},
     year={2012},
     url={http://grosser.es/publications/grosser-2012-Polly-Performing-polyhedral-optimizations-on-a-low-level-intermediate-representation.pdf},
-    urldate={2017-07-20}
+    urldate={2017-07-20},
+    keywords={Literature}
 }
 @online{
     GrosserDiploma,
     author={Tobias Grosser},
     year={2011},
     url={http://grosser.es/publications/grosser-2011-Enabling-Polyhedral-Optimizations-in-LLVM-diplomathesis.pdf},
-    urldate={2017-07-20}
+    urldate={2017-07-20},
+    keywords={Literature}
 }
