--- a/main.tex
+++ b/main.tex
@@ -16,11 +16,11 @@
 \chapter{Motivation}
 \input{Motivation.tex}
 
-\chapter{Begriffsklärung}
-\input{Begriffsklaerung.tex}
-
 \chapter{Polyeder-Modell}
 \input{PolyederModell.tex}
+
+\chapter{Begriffsklärung}
+\input{Begriffsklaerung.tex}
 
 \chapter{Verwendete Software}
 \input{VerwendeteSoftware.tex}
@@ -29,6 +29,7 @@
 \input{AufbauLLVM.tex}
 
 \chapter{Experimentelle Studie}
+\input{Studie.tex}
 
 \chapter{Quellen}
 \nocite{*}
