--- a/references.bib
+++ b/references.bib
@@ -2,15 +2,35 @@
     PollyGrosser,
     author={Tobias Grosser},
     year={2012},
+    title={POLLY—PERFORMING POLYHEDRAL OPTIMIZATIONS ON A LOW-LEVEL INTERMEDIATE REPRESENTATION},
     url={http://grosser.es/publications/grosser-2012-Polly-Performing-polyhedral-optimizations-on-a-low-level-intermediate-representation.pdf},
     urldate={2017-07-20},
     keywords={Literature}
 }
-@online{
+@mastersthesis{
     GrosserDiploma,
     author={Tobias Grosser},
     year={2011},
+    title={ENABLING POLYHEDRAL OPTIMIZATIONS IN LLVM},
+    school={Universität Passau},
     url={http://grosser.es/publications/grosser-2011-Enabling-Polyhedral-Optimizations-in-LLVM-diplomathesis.pdf},
     urldate={2017-07-20},
     keywords={Literature}
+}
+@article{
+    PolyhedronFeautrierLengauer,
+    author={Paul Feautrier, Christian Lengauer},
+    year={2011},
+    title="Polyhedron Model",
+    journal={Journal?},
+    doi={10.1007/978-0-387-09766-4_502},
+    url={https://www.researchgate.net/publication/233401207_Polyhedron_Model},
+    urldate={2017-07-24},
+    keywords={Literature}
+}
+@online{
+    PolyhedronWikipedia,
+    title={Polytope model},
+    url={https://en.wikipedia.org/wiki/Polytope_model},
+    urldate={2017-07-24}
 }
