--- a/main.tex
+++ b/main.tex
@@ -6,9 +6,9 @@
 \usepackage[babel,german=guillemets]{csquotes}
 \usepackage{comment}
 \usepackage{listings}
+\usepackage{color}
 
-\lstset{numbers=left, numberstyle=\tinym numbersep=5pt}
-\lstset{language=c++}
+\lstset{basicstyle=\footnotesize, numbers=left, numberstyle=\tiny, keywordstyle=\color{blue}, numbersep=5pt, language=c++, breaklines=true, tabsize=4, keepspaces=true}
 
 \addbibresource{references.bib}
 
