Improve structure; add many examples for invalid SCoPs

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -84,6 +84,7 @@
 \include{Chapters/Motivation}
 \include{Chapters/LLVM}
 \include{Chapters/Polly}
+
 \cleardoublepage
 \ctparttext{You can put some informational part preamble text here. 
 Illo principalmente su nos. Non message \emph{occidental} angloromanic
@@ -94,12 +95,11 @@ da. Le usate medical addresses pro, europa origine sanctificate nos se.}
 \part{Empirische Studie}
 \include{Chapters/EmpirischeStudie}
 %\addtocontents{toc}{\protect\clearpage} % <--- just debug stuff, ignore
-\include{Chapters/Chapter03}
 %\include{multiToC} % <--- just debug stuff, ignore for your documents
+
+\cleardoublepage
 \part{Analyse}
 \include{Chapters/Analyse}
-
-\nocite{*}
 % ********************************************************************
 % Backmatter
 %*******************************************************
