--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -64,8 +64,7 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
-        \acro{DRY}{Don't Repeat Yourself}
-        \acro{API}{Application Programming Interface}
-        \acro{UML}{Unified Modeling Language}
+        \acro{LLVM}{Low Level Virtual Machine}
+        \acro{SCoP}{Static Control Part}
     \end{acronym}                     
 \endgroup
