--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -42,7 +42,7 @@
 % ****************************************************************************************************
 \newcommand{\myTitle}{A Classic Thesis Style\xspace}
 \newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
-\newcommand{\myDegree}{\xspace}
+\newcommand{\myDegree}{Nahe am Bachelor\xspace}
 \newcommand{\myName}{Stefan Huber\xspace}
 \newcommand{\myProf}{Put name here\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
