--- a/references.bib
+++ b/references.bib
@@ -1,11 +1,11 @@
-@online{
+@article{
     PollyGrosser,
-    author={Tobias Grosser},
+    author={Tobias Grosser, Armin Größlinger, Christian Lengauer},
     year={2012},
     title={POLLY—PERFORMING POLYHEDRAL OPTIMIZATIONS ON A LOW-LEVEL INTERMEDIATE REPRESENTATION},
+    journal={World Scientific Publishing Company},
     url={http://grosser.es/publications/grosser-2012-Polly-Performing-polyhedral-optimizations-on-a-low-level-intermediate-representation.pdf},
-    urldate={2017-07-20},
-    keywords={Literature}
+    urldate={2017-07-20}
 }
 @mastersthesis{
     GrosserDiploma,
@@ -14,8 +14,7 @@
     title={ENABLING POLYHEDRAL OPTIMIZATIONS IN LLVM},
     school={Universität Passau},
     url={http://grosser.es/publications/grosser-2011-Enabling-Polyhedral-Optimizations-in-LLVM-diplomathesis.pdf},
-    urldate={2017-07-20},
-    keywords={Literature}
+    urldate={2017-07-20}
 }
 @article{
     PolyhedronFeautrierLengauer,
@@ -25,12 +24,18 @@
     journal={Journal?},
     doi={10.1007/978-0-387-09766-4_502},
     url={https://www.researchgate.net/publication/233401207_Polyhedron_Model},
-    urldate={2017-07-24},
-    keywords={Literature}
+    urldate={2017-07-24}
 }
 @online{
     PolyhedronWikipedia,
     title={Polytope model},
     url={https://en.wikipedia.org/wiki/Polytope_model},
     urldate={2017-07-24}
+}
+@online{
+    PolyhedralEmpiricalStudy,
+    title={The Potential of Polyhedral Optimization: An Empirical Study},
+    year={2013},
+    url={http://www.infosun.fim.uni-passau.de/publications/docs/SAG+13.pdf},
+    urldate={2017-07-25}
 }
