Use ngerman instead of american

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -55,7 +55,7 @@
 \begin{document}
 \frenchspacing
 \raggedbottom
-\selectlanguage{american} % american ngerman
+\selectlanguage{ngerman} % american ngerman
 %\renewcommand*{\bibname}{new name}
 %\setbibpreamble{}
 \pagenumbering{roman}
