--- a/references.bib
+++ b/references.bib
@@ -39,3 +39,17 @@
     url={http://www.infosun.fim.uni-passau.de/publications/docs/SAG+13.pdf},
     urldate={2017-07-25}
 }
+@online{
+    LLVMWebsite,
+    title={The LLVM Compiler Infrastructure},
+    url={http://llvm.org},
+    urldate={2017-07-25}
+}
+@InProceedings{
+    LLVMResearchBeginning,
+    author    = {Chris Lattner, Vikram Adve},
+    title     = "{LLVM: A Compilation Framework for Lifelong Program Analysis \& Transformation}",
+    booktitle = "{Proceedings of the 2004 International Symposium on Code Generation and Optimization (CGO'04)}",
+    address   = {Palo Alto, California},
+    year      = {2004}
+}
