--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -98,8 +98,8 @@ da. Le usate medical addresses pro, europa origine sanctificate nos se.}
 %\include{multiToC} % <--- just debug stuff, ignore for your documents
 
 \cleardoublepage
-\part{Analyse}
-\include{Chapters/Analyse}
+\part{Evaluierung}
+\include{Chapters/Evaluierung}
 % ********************************************************************
 % Backmatter
 %*******************************************************
