--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -1,12 +1,12 @@
 % ****************************************************************************************************
-% classicthesis-config.tex 
-% formerly known as loadpackages.sty, classicthesis-ldpkg.sty, and classicthesis-preamble.sty 
-% Use it at the beginning of your ClassicThesis.tex, or as a LaTeX Preamble 
+% classicthesis-config.tex
+% formerly known as loadpackages.sty, classicthesis-ldpkg.sty, and classicthesis-preamble.sty
+% Use it at the beginning of your ClassicThesis.tex, or as a LaTeX Preamble
 % in your ClassicThesis.{tex,lyx} with \input{classicthesis-config}
-% ****************************************************************************************************  
-% If you like the classicthesis, then I would appreciate a postcard. 
-% My address can be found in the file ClassicThesis.pdf. A collection 
-% of the postcards I received so far is available online at 
+% ****************************************************************************************************
+% If you like the classicthesis, then I would appreciate a postcard.
+% My address can be found in the file ClassicThesis.pdf. A collection
+% of the postcards I received so far is available online at
 % http://postcards.miede.de
 % ****************************************************************************************************
 
@@ -20,14 +20,14 @@
 	\usepackage{inputenc}
 
 % ****************************************************************************************************
-% 1. Configure classicthesis for your needs here, e.g., remove "drafting" below 
+% 1. Configure classicthesis for your needs here, e.g., remove "drafting" below
 % in order to deactivate the time-stamp on the pages
 % ****************************************************************************************************
 \PassOptionsToPackage{eulerchapternumbers,listings,drafting,%
 					 pdfspacing,%floatperchapter,%linedheaders,%
-					 subfig,beramono,eulermath,parts}{classicthesis}                                        
+					 subfig,beramono,eulermath,parts}{classicthesis}
 % ********************************************************************
-% Available options for classicthesis.sty 
+% Available options for classicthesis.sty
 % (see ClassicThesis.pdf for more information):
 % drafting
 % parts nochapters linedheaders
@@ -61,20 +61,20 @@
 \newlength{\abcd} % for ab..z string length calculation
 \providecommand{\mLyX}{L\kern-.1667em\lower.25em\hbox{Y}\kern-.125emX\@}
 \newcommand{\zb}{z.\,B.}
-\newcommand{\Zb}{Z.\,B.} 
+\newcommand{\Zb}{Z.\,B.}
 % ****************************************************************************************************
 
 
 % ****************************************************************************************************
 % 3. Loading some handy packages
 % ****************************************************************************************************
-% ******************************************************************** 
+% ********************************************************************
 % Packages with options that might require adjustments
-% ******************************************************************** 
+% ********************************************************************
 \PassOptionsToPackage{ngerman}{babel}   % change this to your language(s)
 % Spanish languages need extra options in order to work with this template
 %\PassOptionsToPackage{spanish,es-lcroman}{babel}
-	\usepackage{babel}                  
+	\usepackage{babel}
 
 \usepackage{csquotes}
 \PassOptionsToPackage{%
@@ -91,24 +91,24 @@
 }{biblatex}
     \usepackage{biblatex}
 
-\PassOptionsToPackage{fleqn}{amsmath}       % math environments and more by the AMS 
+\PassOptionsToPackage{fleqn}{amsmath}       % math environments and more by the AMS
     \usepackage{amsmath}
 
-% ******************************************************************** 
+% ********************************************************************
 % General useful packages
-% ******************************************************************** 
+% ********************************************************************
 \PassOptionsToPackage{T1}{fontenc} % T2A for cyrillics
-    \usepackage{fontenc}     
+    \usepackage{fontenc}
 \usepackage{textcomp} % fix warning with missing font shapes
-\usepackage{scrhack} % fix warnings when using KOMA with listings package          
-\usepackage{xspace} % to get the spacing after macros right  
+\usepackage{scrhack} % fix warnings when using KOMA with listings package
+\usepackage{xspace} % to get the spacing after macros right
 \usepackage{mparhack} % get marginpar right
 \usepackage{fixltx2e} % fixes some LaTeX stuff --> since 2015 in the LaTeX kernel (see below)
 %\usepackage[latest]{latexrelease} % will be used once available in more distributions (ISSUE #107)
-\PassOptionsToPackage{printonlyused,smaller}{acronym} 
+\PassOptionsToPackage{printonlyused,smaller}{acronym}
     \usepackage{acronym} % nice macros for handling all acronyms in the thesis
     %\renewcommand{\bflabel}[1]{{#1}\hfill} % fix the list of acronyms --> no longer working
-    %\renewcommand*{\acsfont}[1]{\textsc{#1}} 
+    %\renewcommand*{\acsfont}[1]{\textsc{#1}}
     \renewcommand*{\aclabelfont}[1]{\acsfont{#1}}
 % ****************************************************************************************************
 
@@ -123,18 +123,18 @@
 \usepackage{caption}
 % Thanks to cgnieder and Claus Lahiri
 % http://tex.stackexchange.com/questions/69349/spacedlowsmallcaps-in-caption-label
-% [REMOVED DUE TO OTHER PROBLEMS, SEE ISSUE #82]    
+% [REMOVED DUE TO OTHER PROBLEMS, SEE ISSUE #82]
 %\DeclareCaptionLabelFormat{smallcaps}{\bothIfFirst{#1}{~}\MakeTextLowercase{\textsc{#2}}}
 %\captionsetup{font=small,labelformat=smallcaps} % format=hang,
 \captionsetup{font=small} % format=hang,
-\usepackage{subfig}  
+\usepackage{subfig}
 % ****************************************************************************************************
 
 
 % ****************************************************************************************************
 % 5. Setup code listings
 % ****************************************************************************************************
-\usepackage{listings} 
+\usepackage{listings}
 %\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % for special keywords
 \lstset{language=C++,
     morekeywords={PassOptionsToPackage,selectlanguage},
@@ -145,7 +145,7 @@
     stringstyle=\rmfamily,
     numbers=left,
     numberstyle=\scriptsize,%\tiny
-    stepnumber=5,
+    %stepnumber=5,
     numbersep=8pt,
     showstringspaces=false,
     breaklines=true,
@@ -153,8 +153,8 @@
     %frame=single,
     belowcaptionskip=.75\baselineskip
     %frame=L
-} 
-% ****************************************************************************************************             
+}
+% ****************************************************************************************************
 
 
 % ****************************************************************************************************
@@ -166,10 +166,10 @@
 \PassOptionsToPackage{pdftex,hyperfootnotes=false,pdfpagelabels}{hyperref}
     \usepackage{hyperref}  % backref linktocpage pagebackref
 \pdfcompresslevel=9
-\pdfadjustspacing=1 
+\pdfadjustspacing=1
 \PassOptionsToPackage{pdftex}{graphicx}
-    \usepackage{graphicx} 
- 
+    \usepackage{graphicx}
+
 
 % ********************************************************************
 % Hyperreferences
@@ -190,7 +190,7 @@
     pdfkeywords={},%
     pdfcreator={pdfLaTeX},%
     pdfproducer={LaTeX with hyperref and classicthesis}%
-}   
+}
 
 % ********************************************************************
 % Setup autoreferences
@@ -198,7 +198,7 @@
 % There are some issues regarding autorefnames
 % http://www.ureader.de/msg/136221647.aspx
 % http://www.tex.ac.uk/cgi-bin/texfaq2html?label=latexwords
-% you have to redefine the makros for the 
+% you have to redefine the makros for the
 % language you use, e.g., american, ngerman
 % (as chosen when loading babel/AtBeginDocument)
 % ********************************************************************
@@ -212,20 +212,20 @@
 			\renewcommand*{\chapterautorefname}{Chapter}%
 			\renewcommand*{\sectionautorefname}{Section}%
 			\renewcommand*{\subsectionautorefname}{Section}%
-			\renewcommand*{\subsubsectionautorefname}{Section}%     
+			\renewcommand*{\subsubsectionautorefname}{Section}%
                 }%
-       \addto\extrasngerman{% 
+       \addto\extrasngerman{%
 			\renewcommand*{\paragraphautorefname}{Absatz}%
 			\renewcommand*{\subparagraphautorefname}{Unterabsatz}%
 			\renewcommand*{\footnoteautorefname}{Fu\"snote}%
 			\renewcommand*{\FancyVerbLineautorefname}{Zeile}%
 			\renewcommand*{\theoremautorefname}{Theorem}%
 			\renewcommand*{\appendixautorefname}{Anhang}%
-			\renewcommand*{\equationautorefname}{Gleichung}%        
+			\renewcommand*{\equationautorefname}{Gleichung}%
 			\renewcommand*{\itemautorefname}{Punkt}%
-                }%  
+                }%
             % Fix to getting autorefs for subfigures right (thanks to Belinda Vogt for changing the definition)
-            \providecommand{\subfigureautorefname}{\figureautorefname}%             
+            \providecommand{\subfigureautorefname}{\figureautorefname}%
     }{\relax}
 \makeatother
 
@@ -245,7 +245,7 @@
 % ********************************************************************
 % Last, but not least...
 % ********************************************************************
-\usepackage{classicthesis} 
+\usepackage{classicthesis}
 % ****************************************************************************************************
 
 
@@ -268,9 +268,9 @@
 %\usepackage[light,condensed,math]{iwona}
 %\renewcommand{\sfdefault}{iwona}
 %\usepackage{lmodern} % <-- no osf support :-(
-%\usepackage{cfr-lm} % 
+%\usepackage{cfr-lm} %
 %\usepackage[urw-garamond]{mathdesign} <-- no osf support :-(
-%\usepackage[default,osfigures]{opensans} % scale=0.95 
+%\usepackage[default,osfigures]{opensans} % scale=0.95
 %\usepackage[sfdefault]{FiraSans}
 % ****************************************************************************************************
 
