Add content to Polly

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -62,6 +62,7 @@
 \providecommand{\mLyX}{L\kern-.1667em\lower.25em\hbox{Y}\kern-.125emX\@}
 \newcommand{\zb}{z.\,B.}
 \newcommand{\Zb}{Z.\,B.}
+\newcommand{\ua}{u.\,a.}
 % ****************************************************************************************************
 
 
