--- a/references.bib
+++ b/references.bib
@@ -53,3 +53,10 @@
     address   = {Palo Alto, California},
     year      = {2004}
 }
+@online{
+    IntroLLVM,
+    author={Chris Lattner},
+    title={Introduction to the LLVM Compiler System},
+    url={http://llvm.org/pubs/2008-10-04-ACAT-LLVM-Intro.pdf},
+    urldate={2017-07-25}
+}
