Extend chapters of LLVM and Polly

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -65,6 +65,7 @@
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
         \acro{LLVM}{Low Level Virtual Machine}
+        \acro{LLVM-IR}{\ac{LLVM} Intermediate Representation}
         \acro{SCoP}{Static Control Part}
     \end{acronym}                     
 \endgroup
