--- a/references.bib
+++ b/references.bib
@@ -60,3 +60,10 @@
     url={http://llvm.org/pubs/2008-10-04-ACAT-LLVM-Intro.pdf},
     urldate={2017-07-25}
 }
+@online{
+    PollyPresentation,
+    author={Tobias Grosser, Hongbin Zheng},
+    title={Polly - Polyhedral Transformations for LLVM},
+    url={http://llvm.org/devmtg/2010-11/Grosser-Polly.pdf},
+    urldate={2017-07-26}
+}
