--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -63,6 +63,9 @@
 \newcommand{\zb}{z.\,B.}
 \newcommand{\Zb}{Z.\,B.}
 \newcommand{\ua}{u.\,a.}
+\newcommand{\Ua}{U.\,a.}
+\renewcommand{\dh}{d.\,h.}
+\newcommand{\Dh}{D.\,h.}
 % ****************************************************************************************************
 
 
@@ -139,7 +142,7 @@
 %\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % for special keywords
 \lstset{language=C++,
     morekeywords={PassOptionsToPackage,selectlanguage},
-    keywordstyle=\color{RoyalBlue},%\bfseries,
+    keywordstyle=\color{NavyBlue},%\bfseries,
     basicstyle=\small\ttfamily,
     %identifierstyle=\color{NavyBlue},
     commentstyle=\color{Green}\ttfamily,
@@ -152,8 +155,8 @@
     breaklines=true,
     %frameround=ftff,
     %frame=single,
-    belowcaptionskip=.75\baselineskip
-    %frame=L
+    belowcaptionskip=.75\baselineskip,
+    frame=L
 }
 % ****************************************************************************************************
 
@@ -278,4 +281,16 @@
 
 %Added by Stefan Huber
 \usepackage{comment}
+\usepackage[dvipsnames]{xcolor}
 \usepackage{smartdiagram}
+\usesmartdiagramlibrary{additions}
+
+%Tikz
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta, positioning, shapes, snakes}
+\tikzset{
+    node distance = 5mm and 15mm,
+    myNode/.style = {rectangle, rounded corners, draw=gray, drop shadow, very thick, bottom color=blue!50!white,
+    text centered, top color=white, minimum height=1.2em, minimum width=3em},
+    myPath/.style = {-{Stealth[length=4mm]}, color=NavyBlue, line width=0.2em, draw, rounded corners}
+}
