--- a/references.bib
+++ b/references.bib
@@ -51,7 +51,8 @@
     title     = "{LLVM: A Compilation Framework for Lifelong Program Analysis \& Transformation}",
     booktitle = "{Proceedings of the 2004 International Symposium on Code Generation and Optimization (CGO'04)}",
     address   = {Palo Alto, California},
-    year      = {2004}
+    year      = {2004},
+    url       = {http://llvm.org/pubs/2004-01-30-CGO-LLVM.html}
 }
 @online{
     IntroLLVM,
@@ -65,5 +66,13 @@
     author={Tobias Grosser, Hongbin Zheng},
     title={Polly - Polyhedral Transformations for LLVM},
     url={http://llvm.org/devmtg/2010-11/Grosser-Polly.pdf},
-    urldate={2017-07-26}
+    urldate={2017-07-27}
+}
+@misc{
+    LLVMFoundation,
+    author={Chris Lattner},
+    title={The LLVM Foundation},
+    howpublished={Blog Entry},
+    month={April},
+    year={2014}
 }
