Add definition of region

--- a/references.bib
+++ b/references.bib
@@ -76,3 +76,11 @@
     month={April},
     year={2014}
 }
+@book{
+    Drachenbuch,
+    author={Alfred V. Aho Monica S. Lam Ravi Sethi Jeffrey D. Ullman},
+    title={Compilers},
+    publisher={Person Addison Wesley, Greg Tobin},
+    year={1995},
+    edition={Second edition}
+}
