--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 @article{
     PollyGrosser,
-    author={Tobias Grosser, Armin Größlinger, Christian Lengauer},
+    author={Tobias Grosser and Armin Größlinger and Christian Lengauer},
     year={2012},
     title={POLLY—PERFORMING POLYHEDRAL OPTIMIZATIONS ON A LOW-LEVEL INTERMEDIATE REPRESENTATION},
     journal={World Scientific Publishing Company},
@@ -12,13 +12,14 @@
     author={Tobias Grosser},
     year={2011},
     title={ENABLING POLYHEDRAL OPTIMIZATIONS IN LLVM},
-    school={Universität Passau},
+    school={University Passau},
+    type={master thesis},
     url={http://grosser.es/publications/grosser-2011-Enabling-Polyhedral-Optimizations-in-LLVM-diplomathesis.pdf},
     urldate={2017-07-20}
 }
 @article{
     PolyhedronFeautrierLengauer,
-    author={Paul Feautrier, Christian Lengauer},
+    author={Paul Feautrier and Christian Lengauer},
     year={2011},
     title="Polyhedron Model",
     journal={Journal?},
@@ -34,6 +35,7 @@
 }
 @online{
     PolyhedralEmpiricalStudy,
+    author={Andreas Simbürger and Sven Apel and Armin Größlinger and Christian Lengauer},
     title={The Potential of Polyhedral Optimization: An Empirical Study},
     year={2013},
     url={http://www.infosun.fim.uni-passau.de/publications/docs/SAG+13.pdf},
@@ -47,7 +49,7 @@
 }
 @InProceedings{
     LLVMResearchBeginning,
-    author    = {Chris Lattner, Vikram Adve},
+    author    = {Chris Lattner and Vikram Adve},
     title     = "{LLVM: A Compilation Framework for Lifelong Program Analysis \& Transformation}",
     booktitle = "{Proceedings of the 2004 International Symposium on Code Generation and Optimization (CGO'04)}",
     address   = {Palo Alto, California},
@@ -63,7 +65,7 @@
 }
 @online{
     PollyPresentation,
-    author={Tobias Grosser, Hongbin Zheng},
+    author={Tobias Grosser and Hongbin Zheng},
     title={Polly - Polyhedral Transformations for LLVM},
     url={http://llvm.org/devmtg/2010-11/Grosser-Polly.pdf},
     urldate={2017-07-27}
@@ -78,9 +80,9 @@
 }
 @book{
     Drachenbuch,
-    author={Alfred V. Aho Monica S. Lam Ravi Sethi Jeffrey D. Ullman},
+    author={Alfred V. Aho and Monica S. Lam and Ravi Sethi and Jeffrey D. Ullman},
     title={Compilers},
-    publisher={Person Addison Wesley, Greg Tobin},
+    publisher={Greg Tobin},
     year={1995},
     edition={Second edition}
 }
