Translate into english fixes #1

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -66,6 +66,6 @@
     \begin{acronym}[UMLX]
         \acro{LLVM}{Low Level Virtual Machine}
         \acro{LLVM-IR}{\ac{LLVM} Intermediate Representation}
-        \acro{SCoP}{Static Control Part}
-    \end{acronym}                     
+        \acro{SCoP}{Static Control Part/Program}
+    \end{acronym}
 \endgroup
