--- a/references.bib
+++ b/references.bib
@@ -86,3 +86,9 @@
     year={1995},
     edition={Second edition}
 }
+@misc{
+    FastScopDetection,
+    author={Aditya Kumar and Sebastian Pop},
+    title={SCoP Detection: A Fast Algorithm for Industrial Compilers},
+    year={2016}
+}
