--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -30,7 +30,7 @@
 \documentclass[ twoside,openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
                 footinclude=true,cleardoublepage=empty,abstractoff, % <--- obsolete, remove (todo)
                 BCOR=5mm,paper=a4,fontsize=11pt,a4paper,%
-                american,ngerman,%
+                british,ngerman,%
                 ]{scrreprt}
 
 %********************************************************************
@@ -55,7 +55,7 @@
 \begin{document}
 \frenchspacing
 \raggedbottom
-\selectlanguage{ngerman} % american ngerman
+\selectlanguage{british} % american ngerman
 %\renewcommand*{\bibname}{new name}
 %\setbibpreamble{}
 \pagenumbering{roman}
