Add CFG example

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -309,9 +309,10 @@
 }
 
 %Shortcuts
-\newcommand{\scop}{\ac{SCoP}}
+\newcommand{\cfg}{\ac{CFG} }
+\newcommand{\scop}{\ac{SCoP} }
 \newcommand{\llvmir}{\ac{LLVM-IR} }
 \newcommand{\llvm}{\ac{LLVM} }
-\newcommand{\opt}{\llvm Optimizer }
-\newcommand{\generator}{\llvm Code Generator }
-\newcommand{\linker}{\llvm Linker }
+\newcommand{\opt}{LLVM Optimizer }
+\newcommand{\generator}{LLVM Code Generator }
+\newcommand{\linker}{LLVM Linker }
