--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -64,8 +64,9 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
+        \acro{CFG}{Control Flow Graph}
         \acro{LLVM}{Low Level Virtual Machine}
-        \acro{LLVM-IR}{\ac{LLVM} Intermediate Representation}
+        \acro{LLVM-IR}{LLVM Intermediate Representation}
         \acro{SCoP}{Static Control Part/Program}
     \end{acronym}
 \endgroup
