--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -50,7 +50,7 @@
       %\phantomsection
     \refstepcounter{dummy}
     %\addcontentsline{toc}{chapter}{\lstlistlistingname}
-
+    
     % https://tex.stackexchange.com/a/99656/5125
     \renewcommand{\listoflistings}{%
         \cleardoublepage
@@ -59,7 +59,7 @@
         \listof{listing}{\listoflistingscaption}%
     }
 
-    \pdfbookmark[1]{\lstlistlistingname}{lol}
+    \pdfbookmark[1]{\listoflistingscaption}{lol}
     \listoflistings
 
     \vspace{8ex}
