--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -24,15 +24,15 @@
 % does not support utf8 use another editor!
 % ****************************************************************************************************
 \PassOptionsToPackage{utf8}{inputenc}
-	\usepackage{inputenc}
+\usepackage{inputenc}
 
 % ****************************************************************************************************
 % 1. Configure classicthesis for your needs here, e.g., remove "drafting" below
 % in order to deactivate the time-stamp on the pages
 % ****************************************************************************************************
 \PassOptionsToPackage{eulerchapternumbers,listings,drafting,%
-					 pdfspacing,%floatperchapter,%linedheaders,%
-					 subfig,beramono,eulermath,parts}{classicthesis}
+        pdfspacing,%floatperchapter,%linedheaders,%
+        subfig,beramono,eulermath,parts}{classicthesis}
 % ********************************************************************
 % Available options for classicthesis.sty
 % (see ClassicThesis.pdf for more information):
@@ -81,14 +81,14 @@
 \PassOptionsToPackage{british}{babel}   % change this to your language(s)
 % Spanish languages need extra options in order to work with this template
 %\PassOptionsToPackage{spanish,es-lcroman}{babel}
-	\usepackage{babel}
+\usepackage{babel}
 
 \usepackage{csquotes}
 \PassOptionsToPackage{%
     %backend=biber, %instead of bibtex
-	backend=bibtex8,bibencoding=ascii,%
-	language=auto,%
-	style=numeric-comp,%
+    backend=bibtex8,bibencoding=ascii,%
+    language=auto,%
+    style=numeric-comp,%
     %style=authoryear-comp, % Author 1999, 2010
     %bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
     sorting=nyt, % name, year, title
@@ -214,36 +214,36 @@
 \makeatletter
 \@ifpackageloaded{babel}%
     {%
-       \addto\extrasamerican{%
-			\renewcommand*{\figureautorefname}{Figure}%
-			\renewcommand*{\tableautorefname}{Table}%
-			\renewcommand*{\partautorefname}{Part}%
-			\renewcommand*{\chapterautorefname}{Chapter}%
-			\renewcommand*{\sectionautorefname}{Section}%
-			\renewcommand*{\subsectionautorefname}{Section}%
-			\renewcommand*{\subsubsectionautorefname}{Section}%
-                }%
-       \addto\extrasbritish{%
-			\renewcommand*{\figureautorefname}{Figure}%
-			\renewcommand*{\tableautorefname}{Table}%
-			\renewcommand*{\partautorefname}{Part}%
-			\renewcommand*{\chapterautorefname}{Chapter}%
-			\renewcommand*{\sectionautorefname}{Section}%
-			\renewcommand*{\subsectionautorefname}{Section}%
-			\renewcommand*{\subsubsectionautorefname}{Section}%
-                }%
-       \addto\extrasngerman{%
-			\renewcommand*{\paragraphautorefname}{Absatz}%
-			\renewcommand*{\subparagraphautorefname}{Unterabsatz}%
-			\renewcommand*{\footnoteautorefname}{Fu\"snote}%
-			\renewcommand*{\FancyVerbLineautorefname}{Zeile}%
-			\renewcommand*{\theoremautorefname}{Theorem}%
-			\renewcommand*{\appendixautorefname}{Anhang}%
-			\renewcommand*{\equationautorefname}{Gleichung}%
-			\renewcommand*{\itemautorefname}{Punkt}%
-                }%
-            % Fix to getting autorefs for subfigures right (thanks to Belinda Vogt for changing the definition)
-            \providecommand{\subfigureautorefname}{\figureautorefname}%
+        \addto\extrasamerican{%
+            \renewcommand*{\figureautorefname}{Figure}%
+            \renewcommand*{\tableautorefname}{Table}%
+            \renewcommand*{\partautorefname}{Part}%
+            \renewcommand*{\chapterautorefname}{Chapter}%
+            \renewcommand*{\sectionautorefname}{Section}%
+            \renewcommand*{\subsectionautorefname}{Section}%
+            \renewcommand*{\subsubsectionautorefname}{Section}%
+        }%
+        \addto\extrasbritish{%
+            \renewcommand*{\figureautorefname}{Figure}%
+            \renewcommand*{\tableautorefname}{Table}%
+            \renewcommand*{\partautorefname}{Part}%
+            \renewcommand*{\chapterautorefname}{Chapter}%
+            \renewcommand*{\sectionautorefname}{Section}%
+            \renewcommand*{\subsectionautorefname}{Section}%
+            \renewcommand*{\subsubsectionautorefname}{Section}%
+        }%
+        \addto\extrasngerman{%
+            \renewcommand*{\paragraphautorefname}{Absatz}%
+            \renewcommand*{\subparagraphautorefname}{Unterabsatz}%
+            \renewcommand*{\footnoteautorefname}{Fu\"snote}%
+            \renewcommand*{\FancyVerbLineautorefname}{Zeile}%
+            \renewcommand*{\theoremautorefname}{Theorem}%
+            \renewcommand*{\appendixautorefname}{Anhang}%
+            \renewcommand*{\equationautorefname}{Gleichung}%
+            \renewcommand*{\itemautorefname}{Punkt}%
+        }%
+        % Fix to getting autorefs for subfigures right (thanks to Belinda Vogt for changing the definition)
+        \providecommand{\subfigureautorefname}{\figureautorefname}%
     }{\relax}
 \makeatother
 
@@ -305,6 +305,8 @@
     breaklines
 }
 \newenvironment{code}{\captionsetup{type=listing}}{}
+%\SetupFloatingEnvironment{listing}{name=Program code} %newfloat package
+%\renewcommand{\listoflistingscaption}{List of Program Code} %float package
 
 %Tikz
 \usepackage{tikz}
