--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -26,7 +26,7 @@
     %*******************************************************
     %\phantomsection
     \refstepcounter{dummy}
-    %\addcontentsline{toc}{chapter}{\listfigurename}
+    \addcontentsline{toc}{chapter}{\listfigurename}
     \pdfbookmark[1]{\listfigurename}{lof}
     \listoffigures
 
@@ -37,7 +37,7 @@
     %*******************************************************
     %\phantomsection
     \refstepcounter{dummy}
-    %\addcontentsline{toc}{chapter}{\listtablename}
+    \addcontentsline{toc}{chapter}{\listtablename}
     \pdfbookmark[1]{\listtablename}{lot}
     \listoftables
 
@@ -50,7 +50,7 @@
       %\phantomsection
     \refstepcounter{dummy}
     %\addcontentsline{toc}{chapter}{\lstlistlistingname}
-    
+
     % https://tex.stackexchange.com/a/99656/5125
     \renewcommand{\listoflistings}{%
         \cleardoublepage
