Add a bunch of figures and move some listings to appendix

--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -19,13 +19,13 @@
 
         \vfill
 
-        \includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \medskip
+        \includegraphics[width=6cm]{gfx/pollylabs.png} \cite{PollyLabsLogo} \\ \medskip
 
         \mySubtitle \\ \medskip   
         %\myDegree \\
         %\myDepartment \\                            
-        %\myFaculty \\
-        %\myUni \\ \bigskip
+        \myFaculty \\
+        \myUni \\ \bigskip
 
         \myTime\ -- \myVersion
 
