--- a/references.bib
+++ b/references.bib
@@ -92,3 +92,15 @@
     title={SCoP Detection: A Fast Algorithm for Industrial Compilers},
     year={2016}
 }
+@misc{
+    PollyLabsLogo,
+    title={Logo of PollyLabs},
+    url={http://pollylabs.org/images/logo.png},
+    urldate={2017-07-29}
+}
+@misc{
+    LLVMLogo,
+    title={LLVM Compiler Infrastructure},
+    url={http://www.linux-magazin.de/var/linux_magazin/storage/images/media/linux-magazin/images/llvm-logo3/1082264-1-ger-DE/llvm-logo_opengraph_h.png},
+    urldate={2017-07-29}
+}
