Translate headings to english

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -80,7 +80,7 @@
 %\setcounter{page}{90}
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
-\part{Hintergrund}
+\part{Background}
 \include{Chapters/Motivation}
 \include{Chapters/LLVM}
 \include{Chapters/Polly}
@@ -92,13 +92,13 @@ da. Debitas effortio simplificate sia se, auxiliar summarios da que,
 se avantiate publicationes via. Pan in terra summarios, capital
 interlingua se que. Al via multo esser specimen, campo responder que
 da. Le usate medical addresses pro, europa origine sanctificate nos se.}
-\part{Empirische Studie}
+\part{Empirical Study}
 \include{Chapters/EmpirischeStudie}
 %\addtocontents{toc}{\protect\clearpage} % <--- just debug stuff, ignore
 %\include{multiToC} % <--- just debug stuff, ignore for your documents
 
 \cleardoublepage
-\part{Evaluierung}
+\part{Evaluation}
 \include{Chapters/Evaluierung}
 % ********************************************************************
 % Backmatter
