Correct autorefname of listings of minted (#7)

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -305,6 +305,7 @@
     linenos,
     breaklines
 }
+\providecommand*{\listingautorefname}{Listing}
 \newenvironment{code}{\captionsetup{type=listing}}{}
 %\SetupFloatingEnvironment{listing}{name=Program code} %newfloat package
 %\renewcommand{\listoflistingscaption}{List of Program Code} %float package
