--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -21,12 +21,15 @@
     \let\clearpage\relax
     \let\cleardoublepage\relax
     \let\cleardoublepage\relax
+
+    \addcontentsline{toc}{chapter}{Listings}
+
     %*******************************************************
     % List of Figures
     %*******************************************************
     %\phantomsection
     \refstepcounter{dummy}
-    \addcontentsline{toc}{chapter}{\listfigurename}
+    %\addcontentsline{toc}{section}{\listfigurename}
     \pdfbookmark[1]{\listfigurename}{lof}
     \listoffigures
 
@@ -37,7 +40,7 @@
     %*******************************************************
     %\phantomsection
     \refstepcounter{dummy}
-    \addcontentsline{toc}{chapter}{\listtablename}
+    %\addcontentsline{toc}{chapter}{\listtablename}
     \pdfbookmark[1]{\listtablename}{lot}
     \listoftables
 
@@ -55,7 +58,7 @@
     \renewcommand{\listoflistings}{%
         \cleardoublepage
         \phantomsection
-        \addcontentsline{toc}{chapter}{\listoflistingscaption}%
+        %\addcontentsline{toc}{chapter}{\listoflistingscaption}%
         \listof{listing}{\listoflistingscaption}%
     }
 
@@ -69,7 +72,8 @@
     %*******************************************************
     %\phantomsection
     \refstepcounter{dummy}
-    \pdfbookmark[1]{Acronyms}{acronyms}
+    %\addcontentsline{toc}{chapter}{Acronyms}
+    \pdfbookmark[1]{List of Acronyms}{acronyms}
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
