Add dots and "Page"

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -22,6 +22,7 @@
     \let\cleardoublepage\relax
     \let\cleardoublepage\relax
 
+    \addtocontents{toc}{~\hfill\textbf{Page}\par}
     \addcontentsline{toc}{chapter}{Listings}
 
     %*******************************************************
