--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -33,6 +33,7 @@
 % ****************************************************************************************************
 \PassOptionsToPackage{eulerchapternumbers,listings,%drafting,%
         pdfspacing,%floatperchapter,%linedheaders,%
+        dottedtoc,
         subfig,beramono,eulermath,parts}{classicthesis}
 % ********************************************************************
 % Available options for classicthesis.sty
