Add draftnote command

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -332,3 +332,6 @@
 \newcommand{\opt}{LLVM Optimizer }
 \newcommand{\generator}{LLVM Code Generator }
 \newcommand{\linker}{LLVM Linker }
+
+%temporary commands while drafting
+\newcommand{\draftnote}[1]{\textit{\textbf{\textcolor{red}{#1}}}}
