Add baisc description of LLVM-IR

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -82,5 +82,6 @@
         \acro{LLVM}{Low Level Virtual Machine}
         \acro{LLVM-IR}{LLVM Intermediate Representation}
         \acro{SCoP}{Static Control Part/Program}
+        \acro{SSA}{Static Single-assignment}
     \end{acronym}
 \endgroup
