Add experiment variables (and its table)

--- a/references.bib
+++ b/references.bib
@@ -104,3 +104,10 @@
     url={http://www.linux-magazin.de/var/linux_magazin/storage/images/media/linux-magazin/images/llvm-logo3/1082264-1-ger-DE/llvm-logo_opengraph_h.png},
     urldate={2017-07-29}
 }
+@online{
+    AmdahlsLaw,
+    title={Amdahl's Law},
+    author={Aaron Michalove},
+    url={http://home.wlu.edu/~whaleyt/classes/parallel/topics/amdahl.html},
+    urldate={2017-07-30}
+}
