Add first version of legend

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -313,15 +313,41 @@
 
 %Tikz
 \usepackage{tikz}
-\usetikzlibrary{arrows.meta, positioning, shapes, snakes}
+\usetikzlibrary{arrows.meta, positioning, shapes, snakes, fit}
 \tikzset{
     node distance = 5mm and 15mm,
     defaultNode/.style = {rectangle, rounded corners, draw=gray, drop shadow, very thick, bottom color=defaultColor!50!white, text centered, top color=white, minimum height=1.2em, minimum width=3em},
     llvmIrNode/.style = {defaultNode, bottom color=llvmIrColor!50!white},
     nonLlvmIrNode/.style = {defaultNode, bottom color=nonLlvmIrColor!50!white},
+    legendNode/.style = {rectangle},
     defaultPath/.style = {-{Stealth[length=4mm]}, color=defaultColor, line width=0.2em, draw, rounded corners},
     llvmIrPath/.style = {defaultPath, color=llvmIrColor},
     nonLlvmIrPath/.style = {defaultPath, color=nonLlvmIrColor}
+}
+\newcommand{\legend}[0]{
+    \begin{tikzpicture}
+        \coordinate (firstRowCenter);
+        \coordinate[left=of firstRowCenter] (firstRowLeft);
+        \coordinate[right=of firstRowCenter] (firstRowRight);
+        \path[llvmIrPath] (firstRowLeft) to (firstRowRight);
+        \node[legendNode, right=of firstRowRight] {Passing LLVM-IR};
+
+        \node[llvmIrNode, below=of firstRowCenter] (secondRowCenter) {Node};
+        \coordinate[left=of secondRowCenter] (secondRowLeft);
+        \coordinate[right=of secondRowCenter] (secondRowRight);
+        \node[legendNode, right=of secondRowRight] {Node using LLVM-IR};
+
+        \coordinate[below=of secondRowCenter] (thirdRowCenter);
+        \coordinate[left=of thirdRowCenter] (thirdRowLeft);
+        \coordinate[right=of thirdRowCenter] (thirdRowRight);
+        \path[nonLlvmIrPath] (thirdRowLeft) to (thirdRowRight);
+        \node[legendNode, right=of thirdRowRight] {Passing non-LLVM-IR};
+
+        \node[nonLlvmIrNode, below=of thirdRowCenter] (fourthRowCenter) {Node};
+        \coordinate[left=of fourthRowCenter] (fourthRowLeft);
+        \coordinate[right=of fourthRowCenter] (fourthRowRight);
+        \node[legendNode, right=of fourthRowRight] {Node not using LLVM-IR};
+    \end{tikzpicture}
 }
 
 %Shortcuts
