Improve grammar and some stylistic aspects

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -78,9 +78,9 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
-        \acro{CFG}{Control Flow Graph}
-        \acro{LLVM}{Low Level Virtual Machine}
-        \acro{LLVM-IR}{LLVM Intermediate Representation}
+        \acro{CFG}{the Control Flow Graph}
+        \acro{LLVM}{The Low Level Virtual Machine}
+        \acro{LLVM-IR}{the LLVM Intermediate Representation}
         \acro{SCoP}{Static Control Part/Program}
         \acro{SSA}{Static Single-assignment}
     \end{acronym}
