--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -353,6 +353,7 @@
 %Shortcuts
 \newcommand{\cfg}{\ac{CFG} }
 \newcommand{\scop}{\ac{SCoP} }
+\newcommand{\scops}{\ac{SCoP}s }
 \newcommand{\llvmir}{\ac{LLVM-IR} }
 \newcommand{\llvm}{\ac{LLVM} }
 \newcommand{\opt}{LLVM Optimizer }
