Add first version of abstract

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -9,20 +9,26 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-Short summary of the contents in English\dots a great guide by 
-Kent Beck how to write good abstracts can be found here:  
-\begin{center}
-\url{https://plg.uwaterloo.ca/~migod/research/beckOOPSLA.html}
-\end{center}
+\draftnote{
+    This document is examining the sizes and the ratio of the parts which can be automatically optimized by Polly, the reasons why bigger ones are rejected and what would be the theoretical impact if they would not be rejected.
+}
+\begin{comment}
+    Short summary of the contents in English\dots a great guide by Kent Beck how to write good abstracts can be found here:
+    \begin{center}
+    \url{https://plg.uwaterloo.ca/~migod/research/beckOOPSLA.html}
+    \end{center}
+\end{comment}
 
 \vfill
 
 \begin{otherlanguage}{ngerman}
-\pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
-\chapter*{Zusammenfassung}
-Kurze Zusammenfassung des Inhaltes in deutscher Sprache\dots 
+    \pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
+    \chapter*{Zusammenfassung}
+    \draftnote{
+    Dieses Dokument beschäftigt sich mit der Größe und dem Anteil der durch Polly automatisch optimierbaren Bereiche, mit den Gründen, warum diese nicht noch größer sind, und mit der Frage, wie groß die Auswirkungen sein können, wenn dies der Fall wäre.
+    }
 \end{otherlanguage}
 
-\endgroup			
+\endgroup
 
 \vfill
