Add a somehow more formal definition

--- a/references.bib
+++ b/references.bib
@@ -90,7 +90,8 @@
     FastScopDetection,
     author={Aditya Kumar and Sebastian Pop},
     title={SCoP Detection: A Fast Algorithm for Industrial Compilers},
-    year={2016}
+    year={2016},
+    url={http://impact.gforge.inria.fr/impact2016/papers/impact2016-kumar.pdf}
 }
 @misc{
     PollyLabsLogo,
@@ -110,4 +111,11 @@
     author={Aaron Michalove},
     url={http://home.wlu.edu/~whaleyt/classes/parallel/topics/amdahl.html},
     urldate={2017-07-30}
+}
+@misc{
+    GanserIterativeSchedule,
+    title={Iterative Schedule Optimization for Parallelization in the Polyhedron Model},
+    author={Stefan Ganser and Armin Größlinger and Norbert Siegmund and Sven Apel and Christian Lengauer},
+    url={https://www.infosun.fim.uni-passau.de/publications/docs/GGS+17.pdf},
+    year={2017}
 }
