Extend subject programs table

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -350,6 +350,9 @@
     \end{tikzpicture}
 }
 
+%tabularx
+\newcolumntype{C}{>{\centering\arraybackslash}X}
+
 %Shortcuts
 \newcommand{\cfg}{\ac{CFG} }
 \newcommand{\scop}{\ac{SCoP} }
